<resources>
    <string name="app_name">UasCRUD</string>
    <string name="add_user">Add User</string>
    <string name="fetch_user">Fetch User</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="desc">Desc</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="id">Id</string>
    <string name="lesson">Lesson</string>
    <string name="clas">Class</string>
    <string name="date">Date</string>
    <string name="ket">Ket</string>
</resources>