<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_product_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clas"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_product_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_product_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_product_ket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ket"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:textSize="@dimen/_25sp"
        android:textStyle="bold"/>

</LinearLayout>