<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProductActivity">

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/name"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp" />

    <TextView
        android:id="@+id/tv_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/clas"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/et_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp" />

    <TextView
        android:id="@+id/tv_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/lesson"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/et_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/date"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp" />

    <TextView
        android:id="@+id/tv_ket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/ket"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/et_ket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginRight="@dimen/_16dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/save"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/delete"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"/>

</LinearLayout>